# SnappingTurtle

./: .gitignore  LICENSE  README.md  logic_plan.txt
src/turtlebot3_simulations/turtlebot3_gazebo/: package.xml
src/turtlebot3_simulations/turtlebot3_gazebo/include/turtlebot3_gazebo/: turtlebot3_drive.hpp
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: snappingturtle.launch.py  spawn_turtlebot3.launch.py  turtlebot3_world.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/square_room/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_world/box/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/src/: turtlebot3_drive.cpp
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/Closed-Maze/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/Enclosed/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/Floating/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/TestMaze1/: model.config
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/TestMaze2/: model.config
src/turtlebot3_simulations/vroom/: CMakeLists.txt  package.xml
src/turtlebot3_simulations/vroom/include/: CameraReader.hpp  camera.hpp  constants.hpp  fsm.hpp  lidar.hpp  motordrive.hpp  odom.hpp
src/turtlebot3_simulations/vroom/launch/: actuators_launch.py  sensors_launch.py  snapping_turtle_launch.py
src/turtlebot3_simulations/vroom/src/: CameraReader.cpp  camera.cpp  fsm.cpp  lidar.cpp  main.cpp  motordrive.cpp  odom.cpp
src/turtlebot3_simulations/vroom/worlds/TestMaze1/: model.sdf
src/vroom/: CMakeLists.txt  package.xml
src/vroom/include/: CameraReader.hpp  cam.hpp  constants.hpp  enum.h  fsm.hpp  lidar.hpp  motordrive.hpp  odom.hpp
src/vroom/include/vroom/: fsm.hpp  lidar.hpp  odom.hpp
src/vroom/launch/: robot_state_publisher.launch.py  snappingturtle.launch.py  spawn_turtlebot3.launch.py
src/vroom/src/: CameraReader.cpp  README.md  fsm.cpp  lidar.cpp  main.cpp  motordrive.cpp  odom.cpp
src/vroom/worlds/TestMaze2/: model.sdf
turtlebot3_gazebo/src/: turtlebot3_drive.cpp
